[package]
name = "web3-resolver"
description = "Rust library for resolving Web3 domain names"
version = "0.0.1"
edition = "2021"
readme = "README.md"
keywords = [
    "web3",
    "domain",
    "everscale",
    "unstoppabledomains"
]
categories = ["web-programming"]
license = "Apache-2.0"
license-file = "LICENSE"
repository = "https://github.com/Chums-Team/web3-resolver"
authors = ["Maksim Zubov <zubovmv@gmail.com>", "Chums-Team"]

[dependencies]
anyhow = "1.0.97"
log = "0.4.27"
reqwest = "0.12.15"
url = "2.5.4"
serde_json = "1.0.140"
mini-moka = "0.10.3"
async-trait = "0.1.88"

nekoton = { git = "https://github.com/broxus/nekoton" }
nekoton-abi = { git = "https://github.com/broxus/nekoton" }
nekoton-utils = { git = "https://github.com/broxus/nekoton" }
nekoton-transport = { git = "https://github.com/broxus/nekoton", features = ["jrpc_transport"] }
ton_abi = { git = "https://github.com/broxus/ton-labs-abi" }
ton_block = { git = "https://github.com/broxus/ton-labs-block.git" }
ton_types = { git = "https://github.com/broxus/ton-labs-types.git" }
